premier push TAMBUA 0.5

--- a/employStylex.css
+++ b/employStylex.css
@@ -81,7 +81,7 @@
             display: flex;
             align-items: center;
             padding: 8px 30px;
-            color: rgb(0, 0, 0);
+            color: #3f1b68;
             text-decoration: none;
             border-radius: 7px;
             transition: all 0.3s ease;
