--- a/employStylex.css
+++ b/employStylex.css
@@ -2591,7 +2591,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background: linear-gradient(135deg, #6ea8ff, #4f90e8);
+    background: linear-gradient(135deg, #3f1b68, #3f1b68);
     color: #ffffff;
     border-radius: 12px;
     margin-bottom: 30px;
